# file_converter

./: .gitignore  pyproject.toml
backend/: csv_to_json.py  csv_to_parquet.py  csv_to_xlsx.py  json_to_csv.py  json_to_parquet.py  json_to_xlsx.py  parquet_to_csv.py  parquet_to_json.py  parquet_to_xlsx.py  xlsx_to_csv.py  xlsx_to_json.py  xlsx_to_parquet.py
data/: vendas.csv  vendas.json  vendas.parquet  vendas.xlsx
frontend/: app.py  layout.py  login.py
