[tool.poetry]
name = "file-converter-project"
version = "0.1.0"
description = ""
authors = ["Jesse <jesseabe.rodrigues@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
